--- a/NoticeBoard/app/src/main/res/layout/activity_main.xml
+++ b/NoticeBoard/app/src/main/res/layout/activity_main.xml
@@ -15,14 +15,17 @@
 
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mRecyclerView"
             android:scrollbars="vertical"
             android:layout_weight="2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="8dp">
-    </android.support.v7.widget.RecyclerView>
+            android:layout_margin="8dp"
+            android:scrollbarFadeDuration="0"
+            android:scrollbarSize="5dp"
+            android:scrollbarThumbVertical="@android:color/darker_gray">
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </LinearLayout>
