--- a/NoticeBoard/app/src/main/res/layout/post_list.xml
+++ b/NoticeBoard/app/src/main/res/layout/post_list.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools">
+                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                   xmlns:tools="http://schemas.android.com/tools"
+                                   android:layout_width="match_parent"
+                                   android:layout_height="wrap_content"
+                                   android:layout_margin="10dp">
 
-    <LinearLayout
+    <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
         <ImageView
                 android:id="@+id/dongkey"
@@ -21,64 +22,53 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@mipmap/ic_launcher_round"/>
 
-        <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+        <TextView
+                android:id="@+id/postTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:text="@{Post.Title}"
+                android:layout_toRightOf="@+id/dongkey"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                tools:text="Title"
+                android:layout_alignParentTop="true"/>
+
+        <TextView
+                android:id="@+id/postCreator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="@{Post.Creator}"
+                android:layout_alignBottom="@+id/dongkey"
+                android:layout_toRightOf="@+id/dongkey"
+                android:layout_marginLeft="10dp"
+                tools:text="Creator"/>
+
+        <TextView
+                android:id="@+id/postDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="@{Post.postDate}"
+                android:layout_alignBottom="@+id/dongkey"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="10dp"
+                tools:text="PostDate"/>
+
+        <TextView
+                android:id="@+id/viewCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="@{String.valueOf(Post.ViewCount)}"
+                android:layout_alignBottom="@+id/dongkey"
+                android:layout_toRightOf="@+id/postCreator"
+                android:layout_marginLeft="20dp"
+                tools:text="ViewCount"/>
 
 
-            <TextView
-                    android:id="@+id/postTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:text="@{Post.Title}"
-                    app:layout_constraintStart_toStartOf="match_parent"
-                    tools:text="Title"
-                    android:layout_marginTop="3dp"
-                    android:layout_marginStart="3dp"
-                    android:layout_alignParentTop="true"/>
-
-            <TextView
-                    android:id="@+id/postCreator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="@{Post.Creator}"
-                    android:layout_below="@+id/postTitle"
-                    app:layout_constraintTop_toBottomOf="@+id/postTitle"
-                    app:layout_constraintStart_toStartOf="@+id/postTitle"
-                    tools:text="Creator" />
-
-            <TextView
-                    android:id="@+id/postDate"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:text="@{Post.postDate}"
-                    app:layout_constraintLeft_toRightOf="@+id/postCreator"
-                    app:layout_constraintStart_toStartOf="@+id/postCreator"
-                    android:layout_marginRight="10dp"
-                    tools:text="PostDate" android:layout_alignParentEnd="true" android:layout_marginEnd="49dp"
-                    android:layout_toEndOf="@+id/postCreator" android:layout_marginStart="181dp"
-                    android:layout_alignParentBottom="true" android:layout_marginBottom="2dp"/>
-
-            <TextView
-                    android:id="@+id/viewCount"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="10dp"
-                    android:text="@{String.valueOf(Post.ViewCount)}"
-                    app:layout_constraintTop_toTopOf="@+id/postCreator"
-                    app:layout_constraintLeft_toRightOf="@+id/postCreator"
-                    tools:text="ViewCount" android:layout_alignParentEnd="true" android:layout_marginEnd="171dp"
-                    android:layout_toEndOf="@+id/postCreator" android:layout_marginStart="47dp"
-                    android:layout_alignParentBottom="true" android:layout_marginBottom="2dp"/>
-
-        </RelativeLayout>
-
-
-    </LinearLayout>
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
